--- a/web/workspace/frontend/sass/parts/lists.scss
+++ b/web/workspace/frontend/sass/parts/lists.scss
@@ -2,6 +2,18 @@
 	list-style: none;
 }
 
+.list--buttons {
+	li {
+		padding: 7px 0;
+	}
+	a {
+		display: block;
+		background: #031323;
+		border-radius: 5px;
+		padding: 15px;
+		border: 1px solid 293547;
+	}
+}
 .list--line {
 	list-style: none;
 
