feat: homepage buttons

--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -1440,6 +1440,14 @@ select {
   background-position: calc(100% - 10px) 50%; }
 .list--no-style {
   list-style: none; }
+.list--buttons li {
+  padding: 7px 0; }
+.list--buttons a {
+  display: block;
+  background: #031323;
+  border-radius: 5px;
+  padding: 15px;
+  border: 1px solid 293547; }
 .list--line {
   list-style: none; }
 .list--line li {
