--- a/web/workspace/frontend/sass/parts/lists.scss
+++ b/web/workspace/frontend/sass/parts/lists.scss
@@ -14,6 +14,9 @@
 		padding: 15px;
 		border: 1px solid #293547;
 	}
+	a:hover {
+		border: 1px solid $blue;
+	}
 }
 .list--line {
 	list-style: none;
