feat: use minify js

--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -140,6 +140,6 @@ ga('send', 'pageview');
 </script>
 
 <script src="/assets/js/pattern.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="/assets/js/main.min.js"></script>
 </body>
 </html>
