--- a/web/workspace/partials/content-modules/products.dust
+++ b/web/workspace/partials/content-modules/products.dust
@@ -1,9 +1,8 @@
-<div class="bg--light-grey marg bdr-shadow">
-  <div class="container container--pad">
-    <p class="hdr larger">The DADI stack</p>
-   
+<div class="bg--light-grey marg__top marg__right marg__left bdr-shadow">
+  <div class="container container--pad">   
     <div class="grid">
       <div class="col w-1-4 pad__bottom"><a class="block zoom" href="/platform/api/">
+        <p class="hdr normal bdr__top pad__top" style="border-color:#0BA6DD">Need an API up in 50 ish seconds?</p>
         <div class="product-logo">
           <img src="/assets/products/dadi-api.png" width="45">
         </div>
@@ -11,16 +10,19 @@
         <p class="normal">High-performance <em>RESTful</em> API layer designed in support of API-first development and the principle of <em>COPE</em></p>
       </a></div>
       <div class="col w-1-4 pad__bottom"><a class="block zoom" href="/platform/web/">
+        <p class="hdr normal bdr__top pad__top" style="border-color:#FF2812">Will your client be updaing content?</p>
         <div class="product-logo"><img src="/assets/products/dadi-web.png" width="60"></div>
         <strong class="larger block hdr" style="color:#FF2812">web <img src="/assets/icons/forward-alt.svg" width="20" class="pad__left--half" style="opacity:0.2"></strong>
         <p class="normal">High-performance schema-less templating layer for browser-based product development</p>
       </a></div>
       <div class="col w-1-4 pad__bottom"><a class="block zoom" href="/platform/publish/">
+        <p class="hdr normal bdr__top pad__top" style="border-color:#FFBF0D">Will your client be updaing content?</p>
         <div class="product-logo"><img src="/assets/products/dadi-publish.png" width="45"></div>
         <strong class="larger block hdr" style="color:#FFBF0D">publish <img src="/assets/icons/forward-alt.svg" width="20" class="pad__left--half" style="opacity:0.2"></strong>
         <p class="normal">Market-leading editorial interfaces for the management of content held within <strong>DADI API</strong> and other data sources</p>
       </a></div>
       <div class="col w-1-4 pad__bottom"><a class="block zoom" href="/platform/cdn/">
+        <p class="hdr normal bdr__top pad__top" style="border-color:#F7287B">Will your client be updaing content?</p>
         <div class="product-logo"><img src="/assets/products/dadi-cdn.png" width="45"></div>
         <strong class="larger block hdr" style="color:#F7287B">cdn <img src="/assets/icons/forward-alt.svg" width="20" class="pad__left--half" style="opacity:0.2"></strong>
         <p class="normal">Real-time asset manipulation and delivery application, providing a complete content distribution solution</p>
