--- a/workspace/pages/index.dust
+++ b/workspace/pages/index.dust
@@ -1,14 +1,11 @@
 <!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html lang="{params.lang}">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   {>"partials/metatags" /}
 
-  {<title}Smarter content management.{/title}
+  {<title}{@i18n}Smarter content management.{/i18n}{/title}
 
   <style type="text/css">
     main {
@@ -395,11 +392,11 @@
 
 <nav class="alignc pad__top--x2 pad__bottom">
     <ul class="small float--left">
-        <li><a href="/" class="on">Technology</a>
+        <li><a href="/{params.lang}/" class="on">Technology</a>
         </li>
-        <li><a href="/on-demand">On demand</a>
+        <li><a href="/{params.lang}/on-demand">On demand</a>
         </li>
-        <li><a href="/solutions">Solutions</a>
+        <li><a href="/{params.lang}/solutions">Solutions</a>
         </li>
     </ul>
 
@@ -410,7 +407,7 @@
         </li>
     </ul>
 
-    <a href="/" class="inline-block">
+    <a href="/{params.lang}/" class="inline-block">
         <img src="/assets/img/dadi-colour.svg" width="150" alt="DADI">
     </a>
 </nav>
@@ -420,8 +417,8 @@
 
     <div class="explainer">
         <div class="explainer__intro">
-            <h2 class="kilo">Smarter content management.</h2>
-            <p class="normal">DADI is <strong>open-source</strong>, headless content management technology. It’s built to make <strong>developers</strong> and <strong>editors</strong> happy.</p>
+            <h2 class="kilo">{@i18n}Smarter content management.{/i18n}</h2>
+            <p class="normal">{@i18n}DADI is <strong>open-source</strong>, headless content management technology. It’s built to make <strong>developers</strong> and <strong>editors</strong> happy.{/i18n}</p>
         </div>
 
         <div class="explainer__blurb b-api">
@@ -602,14 +599,14 @@
 
 
     <div class="container container--pad">
-        <h2 class="larger alignc">Success stories</h2>
+        <h2 class="larger alignc">{@i18n}Smarter content management.{/i18n}</h2>
         <p class="alignc normal">Lorem ipsum dolor sit amet, consectetuer adipiscing
             <br>elit. Aenean commodo ligula eget dolor amet. </p>
 
         <div class="grid marg__top--x2">
             {#successes.results}
             <div class="col w-1-1 marg__bottom">
-                <a href="/success-stories/{handle}/" class="cf block pad txt--white " style="background-color:{color};background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%;">
+                <a href="/{params.lang}/success-stories/{handle}/" class="cf block pad txt--white " style="background-color:{color};background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%;">
                     <div class="read inline-block w-1-3 bs-w-2-3 pad bg--black" style="background-color:{color}; color:{text-color}">
                         <p class="hdr large">{title}</p>
                         <p class="normal">{summary}</p>
