--- a/workspace/partials/footer.dust
+++ b/workspace/partials/footer.dust
@@ -18,10 +18,10 @@
         {#latest-footer.results}
           <div class="col w-1-3 pad__bottom">
             {! <p class="txt--grey hdr">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p> !}
-            <p class="hdr large txt--blue"><a href="/latest/{attributes.category}/{attributes.handle}/">{attributes.title}</a></p>
+            <p class="hdr large txt--blue"><a href="/{params.lang}/latest/{attributes.category}/{attributes.handle}/">{attributes.title}</a></p>
             <p class="small txt--mid-grey">By <strong>{attributes.author}</strong></p>
             <p class="small">{@soberMarkdown}{@Truncate data="{attributes.preface}" length="110" ellipsis="true"/}{/soberMarkdown}</p>
-            <p class="small"><a href="/latest/{attributes.category}/{attributes.handle}/" class="btn btn--blue">Read more</a></p>
+            <p class="small"><a href="/{params.lang}/latest/{attributes.category}/{attributes.handle}/" class="btn btn--blue">Read more</a></p>
           </div>
         {/latest-footer.results}
       </div>
@@ -29,72 +29,72 @@
     <div class="grid">
       <div class="col w-1-3 pad__bottom">
         <ul class="list--line normal txt--blue">
-          <li><a href="/contact/">Contact us</a></li>
-          <li><a href="/success-stories/">Success stories</a></li>
-          <li><a href="/latest/">Latest</a></li>
-          <li><a href="/on-demand/">On demand</a></li>
-          <li><a href="/about/">Working with DADI</a>
-          <li><a href="/careers/">Careers</a>
-          <li><a href="/faq/">FAQ</a>
-          <li><a href="/privacy/">Privacy</a></li>
+          <li><a href="/{params.lang}/contact/">Contact us</a></li>
+          <li><a href="/{params.lang}/success-stories/">Success stories</a></li>
+          <li><a href="/{params.lang}/latest/">Latest</a></li>
+          <li><a href="/{params.lang}/on-demand/">On demand</a></li>
+          <li><a href="/{params.lang}/about/">Working with DADI</a>
+          <li><a href="/{params.lang}/careers/">Careers</a>
+          <li><a href="/{params.lang}/faq/">FAQ</a>
+          <li><a href="/{params.lang}/privacy/">Privacy</a></li>
         </ul>
       </div>
       <div class="col w-1-3 pad__bottom">
-        <p class="normal hdr"><a href="/platform/">Platform</a></p>
+        <p class="normal hdr"><a href="/{params.lang}/platform/">Platform</a></p>
         <ul class="list--line">
           <li>
-            <a href="/platform/api/" class="fwb">
+            <a href="/{params.lang}/platform/api/" class="fwb">
             <img src="/assets/products/dadi-api.png" class="alignv float--right" width="15">
             API
             </a>
           </li>
           <li>
-            <a href="/platform/web/" class="fwb">
+            <a href="/{params.lang}/platform/web/" class="fwb">
             <img src="/assets/products/dadi-web.png" class="alignv float--right" width="19">
             Web
             </a>
           </li>
           <li>
-            <a href="/platform/publish/" class="fwb">
+            <a href="/{params.lang}/platform/publish/" class="fwb">
             <img src="/assets/products/dadi-publish.png" class="alignv float--right" width="15">
             Publish
             </a>
           </li>
           <li>
-            <a href="/platform/cdn/" class="fwb">
+            <a href="/{params.lang}/platform/cdn/" class="fwb">
             <img src="/assets/products/dadi-cdn.png" class="alignv float--right" width="15">
             CDN
             </a>
           </li>
           {! <li>
-            <a href="/platform/track/" class="fwb">
+            <a href="/{params.lang}/platform/track/" class="fwb">
             <img src="/assets/products/dadi-track.png" class="alignv float--right" width="15">
             Track
             </a>
           </li>
           <li>
-            <a href="/platform/visualize/" class="fwb">
+            <a href="/{params.lang}/platform/visualize/" class="fwb">
             <img src="/assets/products/dadi-visualize.png" class="alignv float--right" width="19">
             Visualize
             </a>
           </li>
           <li>
-            <a href="/platform/predict/" class="fwb">
+            <a href="/{params.lang}/platform/predict/" class="fwb">
             <img src="/assets/products/dadi-predict.png" class="alignv float--right" width="15">
             Predict
             </a>
           </li>
           <li>
-            <a href="/platform/identity/" class="fwb">
+            <a href="/{params.lang}/platform/identity/" class="fwb">
             <img src="/assets/products/dadi-identity.png" class="alignv float--right" width="8">
             Identity
             </a>
           </li> !}
-          <li><a href="/platform/concepts/">Concepts</a></li>
-          {! <li><a href="/platform/tools/">Tools &amp; Components</a></li> !}
-          <li><a href="/platform/security/">Security</a></li>
-          <li><a href="/platform/roadmap/">Roadmap</a></li>
-          {! <li><a href="/platform/licensing/">Licensing</a></li> !}
+          <li><a href="/{params.lang}/platform/concepts/">Concepts</a></li>
+          {! <li><a href="/{params.lang}/platform/tools/">Tools &amp; Components</a></li> !}
+          <li><a href="/{params.lang}/platform/security/">Security</a></li>
+          <li><a href="/{params.lang}/platform/roadmap/">Roadmap</a></li>
+          {! <li><a href="/{params.lang}/platform/licensing/">Licensing</a></li> !}
           <li>
             <a href="http://docs.dadi.tech" target="_blank">
             <img src="/assets/icons/pop-out.svg" class="alignv float--right" width="15">
@@ -104,15 +104,15 @@
         </ul>
       </div>
       <div class="col w-1-3 pad__bottom">
-        <p class="normal hdr"><a href="/solutions/">Solutions</a></p>
+        <p class="normal hdr"><a href="/{params.lang}/solutions/">Solutions</a></p>
         <ul class="list--line">
-          <li><a href="/solutions/data-strategy/">Data strategy</a></li>
-          <li><a href="/solutions/publishing/">Publishing</a></li>
-          <li><a href="/solutions/product-development/">Product development</a></li>
-          <li><a href="/solutions/crm/">CRM</a></li>
-          <li><a href="/solutions/analytics/">Analytics</a></li>
-          <li><a href="/solutions/content-personalisation/">Content personalisation</a></li>
-          <li><a href="/solutions/commerce/">Commerce</a></li>
+          <li><a href="/{params.lang}/solutions/data-strategy/">Data strategy</a></li>
+          <li><a href="/{params.lang}/solutions/publishing/">Publishing</a></li>
+          <li><a href="/{params.lang}/solutions/product-development/">Product development</a></li>
+          <li><a href="/{params.lang}/solutions/crm/">CRM</a></li>
+          <li><a href="/{params.lang}/solutions/analytics/">Analytics</a></li>
+          <li><a href="/{params.lang}/solutions/content-personalisation/">Content personalisation</a></li>
+          <li><a href="/{params.lang}/solutions/commerce/">Commerce</a></li>
         </ul>
       </div>
     </div>
