--- a/workspace/partials/platform/index.dust
+++ b/workspace/partials/platform/index.dust
@@ -12,7 +12,7 @@
       <img src="/assets/img/d-dark.png" height="45" class="alignv">
       <span class="pad__top block">Docs</span>
     </a></div>
-    <div class="col w-1-4 bs-w-1-2 pad__bottom--x2"><a href="/on-demand/">
+    <div class="col w-1-4 bs-w-1-2 pad__bottom--x2"><a href="/{params.lang}/on-demand/">
       <img src="/assets/img/logo-ondemand.png" height="45" class="alignv">
       <span class="pad__top block">On demand</span>
     </a></div>
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <p><a href="/platform/concepts/" class="btn btn--red normal">Read about the core concepts</a></p>
+  <p><a href="/{params.lang}/platform/concepts/" class="btn btn--red normal">Read about the core concepts</a></p>
 </div>
 
 {>"partials/content-modules/products" /}
@@ -41,12 +41,12 @@
     <div class="col w-1-2">
       <p class="hdr larger txt--red">Secure by default</p>
       <p class="normal"><strong>DADI</strong> is a proven, secure platform that stands up to the most critical vulnerabilities to prevent the worst from happening. Organizations rely on <strong>DADI</strong> for mission-critical sites and applications, testing its security against the most stringent standards.</p>
-      <p><a href="/platform/security/" class="btn btn--red">Find out more</a></p>
+      <p><a href="/{params.lang}/platform/security/" class="btn btn--red">Find out more</a></p>
     </div>
     <div class="col w-1-2">
       <p class="hdr larger txt--red">Always moving forward</p>
       <p class="normal"><strong>DADI</strong> has been in active development since 2014. There are an average of 22 commits every single day, ranging from minor bug fixes to incremental steps towards the creation of major new functionality. We welcome community direction on all features.</p>
-      <p><a href="/platform/roadmap/" class="btn btn--red">Our roadmap</a></p>
+      <p><a href="/{params.lang}/platform/roadmap/" class="btn btn--red">Our roadmap</a></p>
     </div>
   </div>
 </div>
@@ -57,11 +57,11 @@
   <div class="kilo hdr">“Products built with DADI are delivered in days and weeks, not weeks and months.”</div>
   <div class="txt--mid-grey">Chief Technology Officer, <strong>Bauer Media</strong></div>
 
-  <div class="pad__top--x2 marg__top pad__bottom"><a href="/success-stories/" class="btn btn--red normal">See all success stories</a></div>
+  <div class="pad__top--x2 marg__top pad__bottom"><a href="/{params.lang}/success-stories/" class="btn btn--red normal">See all success stories</a></div>
 </div>
 
 {! <div class="container container--pad alignc">
   <p class="alignauto hdr larger txt--red">Licensing</p>
   <p class="alignauto normal"><strong>DADI</strong> is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version ("the AGPL").</p>
-  <a href="/platform/licensing/" class="btn btn--red">More information</a>
+  <a href="/{params.lang}/platform/licensing/" class="btn btn--red">More information</a>
 </div> !}
