--- a/workspace/partials/solutions/index.dust
+++ b/workspace/partials/solutions/index.dust
@@ -8,7 +8,7 @@
         <div class="col w-3-4">
           <p class="large hdr no-marg-i"> {title}</p>
           <p class="pad__top--half alignauto normal no-marg-i">{overview}</p>
-          <p><a href="/solutions/{handle}/" class="btn btn--blue small">Learn more</a></p>
+          <p><a href="/{params.lang}/solutions/{handle}/" class="btn btn--blue small">Learn more</a></p>
         </div>
       </div>
 
@@ -24,5 +24,5 @@
 
 <div class="container container--divider alignc">
   <p class="large txt--blue alignauto no-marg">Contact us to discuss how we can help you unlock the potential of your data</p>
-  <a href="/contact/" class="marg__top btn btn--blue normal">Contact us</a>
+  <a href="/{params.lang}/contact/" class="marg__top btn btn--blue normal">Contact us</a>
 </div>
