--- a/workspace/partials/solutions/list.dust
+++ b/workspace/partials/solutions/list.dust
@@ -10,7 +10,7 @@
     <ul class="list--quotes normal cf grid pad__top">
       {#solutions.results}
         <li class="col w-1-3 bs-w-1-1 marg__bottom--x2">
-          <a class="block zoom" href="/solutions/{handle}/">
+          <a class="block zoom" href="/{params.lang}/solutions/{handle}/">
             <div class="inline-block alignv marg__right">
               <img src="/assets/icons/white/{icon}.svg" height="70">
             </div>
@@ -22,6 +22,6 @@
       {/solutions.results}
     </ul>
 
-    <p><a href="/solutions/" class="btn btn--blue">More about solutions we offer</a></p>
+    <p><a href="/{params.lang}/solutions/" class="btn btn--blue">More about solutions we offer</a></p>
   </div>
 </div>
