--- a/workspace/pages/index.dust
+++ b/workspace/pages/index.dust
@@ -252,8 +252,12 @@
 
     /* Web */
     .w-web__tabs {
+      background: #F2F2F2;
       border-bottom: 1px solid #e5e5e5;
       font-size: 14px;
+      overflow: hidden;
+      border-radius: 6px 6px 0 0;
+      white-space: nowrap;
     }
     .w-web__tab {
       display: inline-block;
@@ -262,18 +266,26 @@
     .w-web__tab a {
       display: block;
       padding: 10px 15px;
+      border-right: 1px solid #e5e5e5;
+      color: #888;
+    }
+    .w-web__tab:last-of-type a {
+      border-right: 0;
     }
     .w-web__tab a:hover {
-      background: #F2F2F2;
+      color: #000;
+      background: linear-gradient(to top, #f9f9f9, #fff);
     }
     .w-web__tab a.u-active {
-      background: #F2F2F2;
+      background: #ffffff;
+      color: #000;
     }
 
     .w-web__num {
       font-family: monospace;
       width: 12px;
-      padding: 10px 12px 0 12px;
+      padding: 9px 12px 0 12px;
+      font-size: 14px;
       line-height: 16px;
       border-right: 1px solid #e5e5e5;
       color: #aaa;
@@ -282,7 +294,6 @@
 
     .w-web pre  {
           margin: 0;
-    white-space: normal;
     font-size: 14px;
     
     }
@@ -452,30 +463,28 @@
             <div class="w-web__body">
                 <div class="w-web__num">01 02 03 04 05 06 07 08 09 10 11 12</div>
 
-                <pre><code class="hljs json">
-{<br>
-&nbsp;&nbsp;"page": {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;"name": "post",<br>
-&nbsp;&nbsp;&nbsp;&nbsp;"description": "An individual post view.",<br>
-&nbsp;&nbsp;&nbsp;&nbsp;"language": "en"<br>
-&nbsp;&nbsp;},<br>
-&nbsp;&nbsp;"routes": [<br>
-&nbsp;&nbsp;&nbsp;&nbsp;{<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"path": "/post/:handle",<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"params": [<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"param": "handle",<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"fetch": "posts"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;]<br>
-&nbsp;&nbsp;&nbsp;&nbsp;}<br>
-&nbsp;&nbsp;],<br>
-&nbsp;&nbsp;"requiredDatasources": [<br>
-&nbsp;&nbsp;&nbsp;&nbsp;"posts"<br>
-&nbsp;&nbsp;],<br>
-&nbsp;&nbsp;"datasources": [<br>
-&nbsp;&nbsp;&nbsp;&nbsp;"posts"<br>
-&nbsp;&nbsp;]<br>
+                <pre><code class="hljs json">{
+  "datasource": {
+    "key": "atricles",
+    "source": {
+      "endpoint": "1.0/site/articles"
+    },
+    "paginate": true,
+    "count": 10,
+    "sort": {
+      "date": -1
+    },
+    "fields": {},
+    "filter": {
+      "state": "published"
+    },
+    "requestParams": [
+      {
+        "param": "handle",
+        "field": "handle"
+      }
+    ]
+  }
 }</code></pre>
             </div>
         </div>
