feat: header updates

--- a/workspace/pages/index.dust
+++ b/workspace/pages/index.dust
@@ -170,7 +170,7 @@
           <img class="alignv marg__top" src="/assets/icons/paint.svg" height="60">
           <h2 class="txt--green larger">{@i18n}Need a hand? Meet our solutions team{/i18n}</h2>
           <p class="normal">{@i18n}We offer a range of services from product strategy to full support to deliver our technology.{/i18n}</p>
-          <p class="normal"><a href="/solutions/" class="btn btn--green small">{@i18n}Our solutions{/i18n}</a>
+          <p class="normal"><a href="/{params.lang}/solutions/" class="btn btn--green small">{@i18n}Our solutions{/i18n}</a>
           </p>
       </div>
     </div>
