--- a/workspace/partials/platform/product.dust
+++ b/workspace/partials/platform/product.dust
@@ -1,4 +1,4 @@
-<div class="container pad__bottom--x2 alignc">
+<div class="container pad__bottom--x2 alignc bg--light-grey">
   <img src="/assets/products/dadi-{product}-full.png" class="product-logo-full" height="65" alt="DADI API">
   <p class="hdr larger alignauto">{@soberMarkdown}{overview}{/soberMarkdown}</p>    
   
