--- a/workspace/frontend/sass/main.scss
+++ b/workspace/frontend/sass/main.scss
@@ -66,15 +66,17 @@
 
   nav {
   	padding-bottom: 20px;
-  	margin-bottom: 40px;
+  	//margin-bottom: 40px;
   	border-bottom: 1px solid #E0E0E0;
   }
   body.home nav {
-  	padding-bottom: 0;
-  	margin-bottom: 0;
+  	//margin-bottom: 0;
   	border-bottom: 0;
   }
 
+  .pattern {
+  	z-index: -1;
+  }
 
   .explainer {
     padding: 0 0 0 3%;
