--- a/workspace/frontend/sass/main.scss
+++ b/workspace/frontend/sass/main.scss
@@ -24,412 +24,417 @@
 @import "site/main";
 @import "site/atom-one-light";
 
-  main {
-    background: none;
-  }
-  main:before {
-    display: none;
-  }
-  nav.container, nav {
-    z-index: 100;
-    position: relative;
-    padding: 0 3%;
-    background: #f9f9f9;
-  }
-  nav ol li,
-  nav ul li {
-    list-style: none;
-    display: inline-block;
-  }
-  nav ol li a,
-  nav ul li a {
-    display: block;
-    font-weight: bold;
-    padding: 2px 10px;
-    margin: 7px;
-    border-radius: 100px;
-  }
-  nav ol li a:hover,
-  nav ul li a:hover {
-    background: #ddd;
-  }
-  nav ol li a.on,
-  nav ul li a.on {
-    background: #E5462C;
-    color: #fff;
-  }
-
-  @media handheld, only screen and (min-width: 50em) {
-    nav ol { float: left; }
-    nav ul { float: right; }
-  }
-
-  nav {
-  	padding-bottom: 20px;
-  	//margin-bottom: 40px;
-  	border-bottom: 1px solid #E0E0E0;
-  }
-  body.home nav {
-  	//margin-bottom: 0;
-  	border-bottom: 0;
-  }
-
-  .pattern {
-  	z-index: -1;
-  }
-
-  .explainer {
-    padding: 0 0 0 3%;
-    position: relative;
-    height: 720px;
-    overflow: hidden;
-    background: #f9f9f9;
-    border-bottom: 1px solid #E0E0E0;
-  }
-  .explainer__intro {
-    width: 23%;
-    margin: 5px;
-  }
-  .explainer__window {
-    background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.13);
-    border-radius: 6px;
-    position: absolute;
-    z-index: 1;
-  }
-
-  .explainer__window code {
-    background: transparent;
-  }
-  .explainer .w-api {
-    width: 35%;
-    height: 230px;
-    left: 32.5%;
-    top: 30px;
-  }
-  .explainer .w-web {
-    width: 38%;
-    height: 240px;
-    left: 3%;
-    top: 380px;
-  }
-  .explainer .w-publish {
-    width: 28%;
-    height: 260px;
-    left: 75%;
-    top: 130px;
-  }
-  .explainer .w-cdn {
-    width: 38%;
-    height: 240px;
-    left: 50%;
-    top: 500px;
-  }
-  .explainer__connect {
-    position: absolute;
-  }
-  .explainer__window:after,
-  .explainer__connect:after,
-  .explainer__connect:before {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    width: 7px; height: 7px;
-    display: block;
-    background: #B2B2B2;
-    content: ' ';
-    border-radius: 10px;
-  }
-  .explainer__window:after {
-    z-index: -100;
-  }
-
-  .explainer .c-1 {
-    top: 143px;
-    left: 26%;
-  }
-  .explainer .c-2 {
-    top: 143px;
-    left: 61%;
-  }
-  .explainer .c-3 {
-    top: 339px;
-    left: 76%;
-  }
-  .explainer .c-4 {
-    top: 523px;
-    left: 35.5%;
-  }
-
-  .explainer .c-1:after {
-    left: -2px;
-    top: 232px;
-  }
-  .explainer .c-1:before {
-    right: -2px;
-    top: 114px;
-  }
-
-  .explainer .c-3:after {
-        left: 57px;
-  top: 158px;
-  }
-  .explainer .c-3:before {
-       left: 57px;
-  top: 48px;
-  }
-
-  .explainer .c-4:before,
-  .explainer .c-4:after,
-  .explainer .c-2:before,
-  .explainer .c-2:after { display: none }
-
-  .explainer .w-api:after {
-        right: -4px;
-  top: 111px;
-  z-index: -1;
-
-  }
-
-  .explainer .w-publish:after {
-            left: -4px;
-  top: 147px;
-  z-index: -1;
-
-  }
-
-  .explainer .w-web:after {
-     right: -4px;
-  top: 140px;
-  }
-  .explainer .w-cdn:after {
-       left: -4px;
-  top: 157px;
-
-  }
-  
-
-
-  /* Publish */
-  .w-publish__header {
-    padding: 11px 20px;
-    border-radius: 6px 0 0 0;
-       background-image: -webkit-linear-gradient(top,#020406 16%,#17273F 100%);
-    background-image: linear-gradient(-180deg,#020406 16%,#17273F 100%);
-    box-shadow: 0 1px 3px rgba(0,0,0,.2);
-     height: 18px;
-  }
-  .w-publish__header img {
-    display: block;
-
-  }
-  .w-publish__body {
-    padding: 20px 10px;
-  }
-  .w-publish__field {
-        border: 1px solid #ECEAEA;
-  background: #fff;
-  box-shadow: 2px 2px 10px 0 rgba(0,0,0,.05);
-  border-radius: 3px;
+main {
+  background: none;
+}
+main:before {
+  display: none;
+}
+nav.container, nav {
+  z-index: 100;
   position: relative;
-  margin: 0 10px 20px;
-  color: #777;
-  }
-  .w-publish__field label {
-        position: absolute;
-  pointer-events: none;
+  padding: 0 3%;
+  background: #21262d;
+  color: #fff;
+}
+nav ol li,
+nav ul li {
+  list-style: none;
+  display: inline-block;
+}
+nav ol li a,
+nav ul li a {
   display: block;
-  left: 15px;
-  top: 13px;
-  font-size: 13px;
-  }
-  .w-publish__field input,
-  .w-publish__field textarea {
-        background: 0 0;
-  font-size: 17px;
-  line-height: 23px;
-  display: block;
-  padding: 30px 15px 13px;
-  border: none;
-  outline: 0;
-  width: 100%;
-  color: #000;
-  box-sizing: border-box;
-  font-family: Karla,"Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;
-  }
+  font-weight: bold;
+  padding: 2px 10px;
+  margin: 7px;
+  border-radius: 100px;
+}
+nav ol li a:hover,
+nav ul li a:hover {
+  background: #ddd;
+}
+nav ol li a.on,
+nav ul li a.on {
+  background: #E5462C;
+  color: #fff;
+}
 
+@media handheld, only screen and (min-width: 50em) {
+  nav ol { float: left; }
+  nav ul { float: right; }
+}
 
-  /* API */
-  .w-api pre  {
-        margin: 0;
-  white-space: normal;
-  font-size: 14px;
-  padding: 10px;
-  }
-  .w-api .explainer__wrap {
-        overflow: scroll;
-  height: 100%;
-  }
+nav {
+	padding-bottom: 20px;
+}
+body.home nav {
+  background: #f9f9f9;
+  color: #21262D;
+}
+main {
+  padding-top: 40px;
+}
+body.home main {
+  padding-top: 0;
+}
 
+.pattern {
+	z-index: -1;
+}
 
-  /* CDN */
-  .w-cdn__header {
-    padding: 20px;
-    border-bottom: 1px solid #E5E5E5;
-    font-family: monospace;
-    font-size: 14px;
-  }
-
-  .w-cdn__body {
-    padding: 20px;
-  }
-  .w-cdn__body img {
-    max-width: 100%;
-    height: auto;
-  }
-
-
-  /* Web */
-  .w-web__tabs {
-    background: #F2F2F2;
-    border-bottom: 1px solid #e5e5e5;
-    font-size: 14px;
-    overflow: hidden;
-    border-radius: 6px 6px 0 0;
-    white-space: nowrap;
-  }
-  .w-web__tab {
-    display: inline-block;
-    width: 33.333%;
-  }
-  .w-web__tab a {
-    display: block;
-    padding: 10px 15px;
-    border-right: 1px solid #e5e5e5;
-    color: #888;
-  }
-  .w-web__tab:last-of-type a {
-    border-right: 0;
-  }
-  .w-web__tab a:hover {
-    color: #000;
-    background: linear-gradient(to top, #f9f9f9, #fff);
-  }
-  .w-web__tab a.u-active {
-    background: #ffffff;
-    color: #000;
-  }
-
-  .w-web__num {
-    font-family: monospace;
-    width: 12px;
-    padding: 9px 12px 0 12px;
-    font-size: 14px;
-    line-height: 16px;
-    border-right: 1px solid #e5e5e5;
-    color: #aaa;
-    float: left;
-  }
-
-  .w-web pre  {
-        margin: 0;
-  font-size: 14px;
-  
-  }
-
-  .w-web__body {
-        overflow: scroll;
-  height: 203px;
-  }
-
-
-  .explainer__blurb {
-        width: 220px;
+.explainer {
+  padding: 0 0 0 3%;
+  position: relative;
+  height: 720px;
+  overflow: hidden;
+  background: #f9f9f9;
+  border-bottom: 1px solid #E0E0E0;
+}
+.explainer__intro {
+  width: 23%;
+  margin: 5px;
+}
+.explainer__window {
+  background: #fff;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.13);
+  border-radius: 6px;
   position: absolute;
-  color: #43595F;
-  }
-  .explainer__blurb p {
-    margin: 8px 0 0;
-    font-size: 14px;
-    line-height: 18px;
-  }
-  .explainer__blurb img {
-    float: left;
-  margin: 10px 17px 0 0;
-  }
+  z-index: 1;
+}
 
-  .b-api {
-   left: 37%;
-  top: 274px;
-  }
+.explainer__window code {
+  background: transparent;
+}
+.explainer .w-api {
+  width: 35%;
+  height: 230px;
+  left: 32.5%;
+  top: 30px;
+}
+.explainer .w-web {
+  width: 38%;
+  height: 240px;
+  left: 3%;
+  top: 380px;
+}
+.explainer .w-publish {
+  width: 28%;
+  height: 260px;
+  left: 75%;
+  top: 130px;
+}
+.explainer .w-cdn {
+  width: 38%;
+  height: 240px;
+  left: 50%;
+  top: 500px;
+}
+.explainer__connect {
+  position: absolute;
+}
+.explainer__window:after,
+.explainer__connect:after,
+.explainer__connect:before {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  width: 7px; height: 7px;
+  display: block;
+  background: #B2B2B2;
+  content: ' ';
+  border-radius: 10px;
+}
+.explainer__window:after {
+  z-index: -100;
+}
 
-  .b-web {
-    left: 3%;
-  top: 637px;
-  }
+.explainer .c-1 {
+  top: 143px;
+  left: 26%;
+}
+.explainer .c-2 {
+  top: 143px;
+  left: 61%;
+}
+.explainer .c-3 {
+  top: 339px;
+  left: 76%;
+}
+.explainer .c-4 {
+  top: 523px;
+  left: 35.5%;
+}
 
-  .b-cdn {
-   left: 50%;
-  top: 436px;
-  }
+.explainer .c-1:after {
+  left: -2px;
+  top: 232px;
+}
+.explainer .c-1:before {
+  right: -2px;
+  top: 114px;
+}
 
-  .b-publish {
-       left: 75%;
-  top: 65px;
-  }
+.explainer .c-3:after {
+      left: 57px;
+top: 158px;
+}
+.explainer .c-3:before {
+     left: 57px;
+top: 48px;
+}
+
+.explainer .c-4:before,
+.explainer .c-4:after,
+.explainer .c-2:before,
+.explainer .c-2:after { display: none }
+
+.explainer .w-api:after {
+      right: -4px;
+top: 111px;
+z-index: -1;
+
+}
+
+.explainer .w-publish:after {
+          left: -4px;
+top: 147px;
+z-index: -1;
+
+}
+
+.explainer .w-web:after {
+   right: -4px;
+top: 140px;
+}
+.explainer .w-cdn:after {
+     left: -4px;
+top: 157px;
+
+}
 
 
-  .w-api, .b-api {
-    animation: popin 0.2s;
-    animation-fill-mode: forwards;
-  }
 
-  .w-publish, .b-publish {
-    opacity: 0;
-    animation: popin 0.2s;
-    animation-delay: 0.3s;
-    animation-fill-mode: forwards;
-  }
+/* Publish */
+.w-publish__header {
+  padding: 11px 20px;
+  border-radius: 6px 0 0 0;
+     background-image: -webkit-linear-gradient(top,#020406 16%,#17273F 100%);
+  background-image: linear-gradient(-180deg,#020406 16%,#17273F 100%);
+  box-shadow: 0 1px 3px rgba(0,0,0,.2);
+   height: 18px;
+}
+.w-publish__header img {
+  display: block;
 
-  .w-web, .b-web {
-    opacity: 0;
-    animation: popin 0.2s;
-    animation-delay: 0.6s;
-    animation-fill-mode: forwards;
-  }
+}
+.w-publish__body {
+  padding: 20px 10px;
+}
+.w-publish__field {
+      border: 1px solid #ECEAEA;
+background: #fff;
+box-shadow: 2px 2px 10px 0 rgba(0,0,0,.05);
+border-radius: 3px;
+position: relative;
+margin: 0 10px 20px;
+color: #777;
+}
+.w-publish__field label {
+      position: absolute;
+pointer-events: none;
+display: block;
+left: 15px;
+top: 13px;
+font-size: 13px;
+}
+.w-publish__field input,
+.w-publish__field textarea {
+      background: 0 0;
+font-size: 17px;
+line-height: 23px;
+display: block;
+padding: 30px 15px 13px;
+border: none;
+outline: 0;
+width: 100%;
+color: #000;
+box-sizing: border-box;
+font-family: Karla,"Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;
+}
 
-  .w-cdn, .b-cdn {
-    opacity: 0;
-    animation: popin 0.2s;
-    animation-delay: 0.9s;
-    animation-fill-mode: forwards;
-  }
 
-  .explainer__connect {
-    opacity: 0;
-    animation: popin 0.2s;
-    animation-delay: 1.2s;
-    animation-fill-mode: forwards;
-  }
+/* API */
+.w-api pre  {
+      margin: 0;
+white-space: normal;
+font-size: 14px;
+padding: 10px;
+}
+.w-api .explainer__wrap {
+      overflow: scroll;
+height: 100%;
+}
 
-  .explainer__window:after,
-  .explainer__connect:after,
-  .explainer__connect:before {
-     opacity: 0;
-    animation: fadein 0.2s;
-    animation-delay: 1.5s;
-    animation-fill-mode: forwards;
-  }
 
-  /* Animations */
+/* CDN */
+.w-cdn__header {
+  padding: 20px;
+  border-bottom: 1px solid #E5E5E5;
+  font-family: monospace;
+  font-size: 14px;
+}
 
-  @keyframes popin {
-    0% { opacity: 0; transform: scale(1) }
-    80%   { opacity: 1; transform: scale(1.1) }
-    100%   { opacity: 1; transform: scale(1) }
-  }
+.w-cdn__body {
+  padding: 20px;
+}
+.w-cdn__body img {
+  max-width: 100%;
+  height: auto;
+}
 
-  @keyframes fadein {
-    0% { opacity: 0; }
-    100%   { opacity: 1; }
-  }
+
+/* Web */
+.w-web__tabs {
+  background: #F2F2F2;
+  border-bottom: 1px solid #e5e5e5;
+  font-size: 14px;
+  overflow: hidden;
+  border-radius: 6px 6px 0 0;
+  white-space: nowrap;
+}
+.w-web__tab {
+  display: inline-block;
+  width: 33.333%;
+}
+.w-web__tab a {
+  display: block;
+  padding: 10px 15px;
+  border-right: 1px solid #e5e5e5;
+  color: #888;
+}
+.w-web__tab:last-of-type a {
+  border-right: 0;
+}
+.w-web__tab a:hover {
+  color: #000;
+  background: linear-gradient(to top, #f9f9f9, #fff);
+}
+.w-web__tab a.u-active {
+  background: #ffffff;
+  color: #000;
+}
+
+.w-web__num {
+  font-family: monospace;
+  width: 12px;
+  padding: 9px 12px 0 12px;
+  font-size: 14px;
+  line-height: 16px;
+  border-right: 1px solid #e5e5e5;
+  color: #aaa;
+  float: left;
+}
+
+.w-web pre  {
+      margin: 0;
+font-size: 14px;
+
+}
+
+.w-web__body {
+      overflow: scroll;
+height: 203px;
+}
+
+
+.explainer__blurb {
+      width: 220px;
+position: absolute;
+color: #43595F;
+}
+.explainer__blurb p {
+  margin: 8px 0 0;
+  font-size: 14px;
+  line-height: 18px;
+}
+.explainer__blurb img {
+  float: left;
+margin: 10px 17px 0 0;
+}
+
+.b-api {
+ left: 37%;
+top: 274px;
+}
+
+.b-web {
+  left: 3%;
+top: 637px;
+}
+
+.b-cdn {
+ left: 50%;
+top: 436px;
+}
+
+.b-publish {
+     left: 75%;
+top: 65px;
+}
+
+
+.w-api, .b-api {
+  animation: popin 0.2s;
+  animation-fill-mode: forwards;
+}
+
+.w-publish, .b-publish {
+  opacity: 0;
+  animation: popin 0.2s;
+  animation-delay: 0.3s;
+  animation-fill-mode: forwards;
+}
+
+.w-web, .b-web {
+  opacity: 0;
+  animation: popin 0.2s;
+  animation-delay: 0.6s;
+  animation-fill-mode: forwards;
+}
+
+.w-cdn, .b-cdn {
+  opacity: 0;
+  animation: popin 0.2s;
+  animation-delay: 0.9s;
+  animation-fill-mode: forwards;
+}
+
+.explainer__connect {
+  opacity: 0;
+  animation: popin 0.2s;
+  animation-delay: 1.2s;
+  animation-fill-mode: forwards;
+}
+
+.explainer__window:after,
+.explainer__connect:after,
+.explainer__connect:before {
+   opacity: 0;
+  animation: fadein 0.2s;
+  animation-delay: 1.5s;
+  animation-fill-mode: forwards;
+}
+
+/* Animations */
+
+@keyframes popin {
+  0% { opacity: 0; transform: scale(1) }
+  80%   { opacity: 1; transform: scale(1.1) }
+  100%   { opacity: 1; transform: scale(1) }
+}
+
+@keyframes fadein {
+  0% { opacity: 0; }
+  100%   { opacity: 1; }
+}
