--- a/workspace/partials/header.dust
+++ b/workspace/partials/header.dust
@@ -10,14 +10,14 @@
 
 <nav class="alignc pad__top--x2 pad__bottom small cf">
   <a href="/{params.lang}/" class="inline-block marg__bottom">
-    <img src="/assets/img/dadi-colour.svg" width="150" alt="DADI">
+    <img src="/assets/img/dadi-{@eq key=page.key value="home"}colour{:else}light{/eq}.svg" width="150" alt="DADI">
   </a>
   <ol>
-    <li><a href="/{params.lang}/" class="on">Technology</a>
+    <li><a href="/{params.lang}/" {@eq key=page.key value="home"}class="on"{/eq}>Technology</a>
     </li>
-    <li><a href="/{params.lang}/on-demand">On demand</a>
+    <li><a href="/{params.lang}/on-demand" {@eq key=page.key value="On demand"}class="on"{/eq}>On demand</a>
     </li>
-    <li><a href="/{params.lang}/solutions">Solutions</a>
+    <li><a href="/{params.lang}/solutions" {@eq key=page.key value="Solutions"}class="on"{/eq}>Solutions</a>
     </li>
   </ol>
   <ul>
@@ -37,6 +37,9 @@
     {/page.color}
   {/params.product} !}
 
+  
+  {@ne key=page.key value="home"}{>"partials/pattern" primary="#21262d" /}{/ne}
+
   <div class="container"> 
     {! {>"partials/breadcrumb" /}   !}  
     {>"partials/titles" placement=page.key /}
@@ -44,34 +47,4 @@
   </div>
 </nav>
 
-
 <main>
-
-{! <!doctype html>
-<html lang="{params.lang}">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  {>"partials/metatags" /}
-</head>
-
-<body class="{+bodyClass}light{/bodyClass}">
-
-<div class="top {?params.section}top--{params.section}{/params.section}">
-  {?params.product}
-    {>"partials/pattern" primary=products.results[0].dark-color /}
-  {:else}
-    {?page.color}
-      {>"partials/pattern" primary=page.color /}
-    {:else}
-      {>"partials/pattern" primary="#041628" /}
-    {/page.color}
-  {/params.product}
-
-  <div class="container"> 
-    {>"partials/navigation" /}
-    {>"partials/breadcrumb" /}    
-    {>"partials/titles" placement=page.key /}
-    {+top/}
-  </div>
-</div>!}
