--- a/workspace/public/assets/css/main.css
+++ b/workspace/public/assets/css/main.css
@@ -2029,7 +2029,8 @@ nav.container, nav {
   z-index: 100;
   position: relative;
   padding: 0 3%;
-  background: #f9f9f9; }
+  background: #21262d;
+  color: #fff; }
 nav ol li,
 nav ul li {
   list-style: none;
@@ -2054,10 +2055,14 @@ nav ul li a.on {
   nav ul {
     float: right; } }
 nav {
-  padding-bottom: 20px;
-  border-bottom: 1px solid #E0E0E0; }
+  padding-bottom: 20px; }
 body.home nav {
-  border-bottom: 0; }
+  background: #f9f9f9;
+  color: #21262D; }
+main {
+  padding-top: 40px; }
+body.home main {
+  padding-top: 0; }
 .pattern {
   z-index: -1; }
 .explainer {
